[package]
name = "collab-coding-backend"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-files = "0.6"
actix = "0.13.5"
actix-web = "4"
actix-web-actors = "4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }
actix-cors = "0.6"